Bug 1960105 - Tweak log levels for IMAP compaction refusal reasons. r=aleca

Differential Revision: https://phabricator.services.mozilla.com/D247205

--HG--
extra : amend_source : 79f90d55e12ebaeded7ef7c02aec77c36ecf249a